Error de margin right

--- a/src/app/pages/basicos/basicos.component.html
+++ b/src/app/pages/basicos/basicos.component.html
@@ -52,7 +52,7 @@
             <th scope="row">{{i}}</th>
             <td>{{areaa.nombre}}</td>
             <td>
-              <button class="btn btn-danger mr-1" (click)="deleteArea(area.idArea)" type="button">
+              <button class="btn btn-danger mr-1" (click)="deleteArea(areaa.idArea)" type="button">
                 <i class="fas fa-trash"></i>
               </button>
             </td>
@@ -282,8 +282,8 @@
   </div>
 </div>
 
-<!--modal beneficios-->
-<div class="modal fade" id="beneficiomodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!--modal beneficios--> 
+<div class="modal fade" id="beneficioomodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
