--- a/src/app/pages/benepersonas/benepersonas.component.html
+++ b/src/app/pages/benepersonas/benepersonas.component.html
@@ -1,3 +1,4 @@
+<a class="btn btn-success mr-5" [routerLink]="['/log/personas/nueva']">Nueva Persona</a>
 <button class="btn btn-danger" routerLink="['personas']">Regresar</button>
 <div class="row mt-3">
   <div class="col-6">
@@ -80,7 +81,7 @@
   </div>
   </div> 
 
-  <div class="modal fade" id="beneficiomodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="beneficiomodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"> 
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
