--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #FAAC58;">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #FAAC58;">
   <a class="navbar-brand" href="#"><img src="../../../assets/img/jalpa1.png" width="70" height="30" alt=""> Inicio</a>
   
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -10,7 +10,18 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['buscar']">
           <i class="fas fa-search-plus" style="color: white;"></i>Buscar</a>
-      </li>
+        </li>
+            <li class="nav-item dropdown" routerLinkActive="active">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-file-alt" style="color: white;"></i>
+                Reportes
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" [routerLink]="['localidad']">Por Localidad</a>
+                <a class="dropdown-item" href="#">Por Apoyo</a>
+                <a class="dropdown-item" href="#">Por Area</a>
+              </div>
+            </li>
       <li *ngIf="idRol==='1'" class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['catalogos']">
           <i class="fas fa-cogs" style="color: white;"></i>Catalogos</a>
