--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,7 +18,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" [routerLink]="['localidad']">Por Localidad</a>
-                <a class="dropdown-item" href="#">Por Apoyo</a>
+                <a class="dropdown-item" [routerLink]="['apoyos']">Por Apoyo</a>
                 <a class="dropdown-item" href="#">Por Area</a>
               </div>
             </li>
