--- a/src/app/pages/buscar/buscar.component.html
+++ b/src/app/pages/buscar/buscar.component.html
@@ -1,4 +1,4 @@
-<h2>Buscar Persona:</h2>
+<h2>Buscar Personas:</h2>
 <div class="row">
   <div class="form-check ml-3">
     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" [(ngModel)]="cl" value="nombre">
